# cherry

./: .env_sample  .gitignore  Home.py  README.md  config.json  install_ai_environment.bat  install_ai_environment.ps1  mcp_file_management.py  mcp_private_rag.py  pyproject.toml  task_management.md  temp_fix.py  toolsettings.py  utils.py
.cursor/rules/: uv.mdc
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/pdf/: processing_status.json
data/vectorstores/combined_index/: index.faiss  index.pkl
mcp-config/: filesystem.json  local mcp.json  python-ast-repl.json  python-repl.json  sequential-thinking.json  sqlite.json  데이터 분석 도구.json
pages/: 01_MCP_Store.py  02_Prompt_Store.py  03_Agent.py  03_DS_Agent.py  03_Data_Agent.py  04_AI_App_Store.py
prompt-config/: 2055186.json  default_emp_no.json
sandbox/: vit_summary.txt
store/: ai_app_store.json  mcp_store.json  prompt_store.json
