[project]
name = "cherry_ai"
version = "0.0.1"
description = "Cherry AI - Python 3.12 Compatible ML/DL Environment"
authors = [
    { name = "Gukil Jo", email = "gukil.jo@sk.com" },
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11,<4.0"
dependencies = [
    # ì›¹ í”„ë ˆìž„ì›Œí¬
    "streamlit==1.44.1",
    # ê¸°ë³¸ ìœ í‹¸ë¦¬í‹°
    "python-dotenv==1.1.0",
    "nest-asyncio==1.6.0",
    "pydantic==2.11.3",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "tabulate==0.9.0",
    # ê¸°ë³¸ ë°ì´í„° ë¶„ì„ íŒ¨í‚¤ì§€ë“¤ (TensorFlow í˜¸í™˜ì„±ì„ ìœ„í•´ numpy ë²„ì „ ì¡°ì •)
    "numpy>=1.26.0,<2.2.0",
    "pandas>=2.2.0,<3.0.0",
    "scipy>=1.15.0,<2.0.0",
    "matplotlib>=3.10.0,<4.0.0",
    "seaborn>=0.13.0,<1.0.0",
    "scikit-learn>=1.6.0,<2.0.0",
    # ðŸ†• Python 3.12 í˜¸í™˜ ML íŒ¨í‚¤ì§€ë“¤
    "xgboost>=2.0.3,<3.0.0", # Python 3.12 ì§€ì›
    "lightgbm>=4.1.0,<5.0.0", # Python 3.12 ì§€ì›
    "catboost>=1.2.2,<2.0.0", # Python 3.12 ì§€ì›
    # ëª¨ë¸ í•´ì„ ë° ê¸°íƒ€ ìœ í‹¸ë¦¬í‹°
    "shap>=0.45.0,<1.0.0",
    "statsmodels>=0.14.0,<1.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "plotly>=5.15.0,<6.0.0",
    "wordcloud>=1.9.0,<2.0.0",
    "Pillow>=11.0.0,<12.0.0", # ìµœì‹  ë²„ì „ìœ¼ë¡œ ì—…ë°ì´íŠ¸
    "nltk>=3.8.0,<4.0.0",
    # LangChain ë° MCP ê´€ë ¨
    "mcp==1.6.0",
    "langgraph==0.4.1",
    "langgraph-checkpoint==2.0.25",
    "langgraph-prebuilt==0.1.8",
    "langgraph-sdk==0.1.63",
    "langchain==0.3.25",
    "langchain-community==0.3.24",
    "langchain-core==0.3.61",
    "langchain-experimental==0.3.4",
    "langchain-text-splitters==0.3.8",
    "langchain-openai==0.3.14",
    "langchain-mcp-adapters==0.0.9",
    "tensorflow>=2.19.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "torchaudio>=2.7.0",
    "pymupdf>=1.26.0",
    "faiss-cpu>=1.11.0",
]

[project.optional-dependencies]
# ê°œë°œ ë„êµ¬
dev = [
    "mypy>=1.11.1", 
    "ruff>=0.6.1",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0"
]

# ðŸ†• CPU ì „ìš© ë”¥ëŸ¬ë‹ (Python 3.12 í˜¸í™˜)
cpu = [
    "tensorflow>=2.19.0,<3.0.0",      # Python 3.12 ì§€ì›, numpy 2.x í˜¸í™˜
    "torch>=2.1.0,<3.0.0",            # Python 3.12 ì§€ì›
    "torchvision>=0.16.0,<1.0.0",     # Python 3.12 ì§€ì›
    "torchaudio>=2.1.0,<3.0.0",       # Python 3.12 ì§€ì›
]

# ðŸ†• GPU ê°€ì† ë”¥ëŸ¬ë‹ (Python 3.12 + NVIDIA GPU)
gpu = [
    "tensorflow>=2.19.0,<3.0.0",      # Python 3.12 + GPU ì§€ì›, numpy 2.x í˜¸í™˜
    "torch>=2.1.0,<3.0.0",            # Python 3.12 + CUDA ì§€ì›
    "torchvision>=0.16.0,<1.0.0",     # Python 3.12 + CUDA ì§€ì›
    "torchaudio>=2.1.0,<3.0.0",       # Python 3.12 + CUDA ì§€ì›
]

# ðŸ†• ê³ ê¸‰ ML/DL ì—°êµ¬ìš© íŒ¨í‚¤ì§€ (Python 3.12 í˜¸í™˜)
research = [
    "transformers>=4.36.0,<5.0.0",    # Python 3.12 ì§€ì›
    "datasets>=2.16.0,<3.0.0",        # Python 3.12 ì§€ì›  
    "accelerate>=0.25.0,<1.0.0",      # Python 3.12 ì§€ì›
    "evaluate>=0.4.0,<1.0.0",         # Python 3.12 ì§€ì›
    "tokenizers>=0.15.0,<1.0.0",      # Python 3.12 ì§€ì›
]

# ðŸ†• AutoML ë° í•˜ì´í¼íŒŒë¼ë¯¸í„° ìµœì í™” (Python 3.12 í˜¸í™˜)
automl = [
    "optuna>=3.5.0,<4.0.0",           # Python 3.12 ì§€ì›
    "hyperopt>=0.2.7,<1.0.0",         # Python 3.12 ì§€ì›
    "scikit-optimize>=0.9.0,<1.0.0",  # Python 3.12 ì§€ì›
]

# ðŸ†• MLOps ë° ì‹¤í—˜ ì¶”ì  (Python 3.12 í˜¸í™˜)
mlops = [
    "mlflow>=2.9.0,<3.0.0",           # Python 3.12 ì§€ì›
    "wandb>=0.16.0,<1.0.0",           # Python 3.12 ì§€ì›
    "tensorboard>=2.15.0,<3.0.0",     # Python 3.12 ì§€ì›
]

# ðŸ†• í™•ìž¥ ì‹œê°í™” (Python 3.12 í˜¸í™˜)
visualization = [
    "bokeh>=3.3.0,<4.0.0",            # Python 3.12 ì§€ì›
    "altair>=5.2.0,<6.0.0",           # Python 3.12 ì§€ì›  
    "holoviews>=1.18.0,<2.0.0",       # Python 3.12 ì§€ì›
    "datashader>=0.16.0,<1.0.0",      # Python 3.12 ì§€ì›
]

# ðŸ†• ì „ì²´ íŒ¨í‚¤ì§€ (Python 3.12 + GPU + ëª¨ë“  ê¸°ëŠ¥)
full = [
    "tensorflow>=2.19.0,<3.0.0",      # numpy 2.x í˜¸í™˜
    "torch>=2.1.0,<3.0.0", 
    "torchvision>=0.16.0,<1.0.0",
    "torchaudio>=2.1.0,<3.0.0",
    "transformers>=4.36.0,<5.0.0",
    "datasets>=2.16.0,<3.0.0", 
    "accelerate>=0.25.0,<1.0.0",
    "optuna>=3.5.0,<4.0.0",
    "mlflow>=2.9.0,<3.0.0",
    "wandb>=0.16.0,<1.0.0",
    "bokeh>=3.3.0,<4.0.0",
    "altair>=5.2.0,<6.0.0",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.react_agent", "react_agent"]
[tool.setuptools.package-dir]
"langgraph.templates.react_agent" = "src/react_agent"
"react_agent" = "src/react_agent"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.1.89",
]

# ðŸ†• Python 3.12 í˜¸í™˜ ì˜ì¡´ì„± ê·¸ë£¹
ml-cpu-py312 = [
    "tensorflow>=2.19.0,<3.0.0",      # numpy 2.x í˜¸í™˜
    "torch>=2.1.0,<3.0.0",
    "xgboost>=2.0.3,<3.0.0",
    "lightgbm>=4.1.0,<5.0.0", 
    "catboost>=1.2.2,<2.0.0",
    "shap>=0.45.0,<1.0.0",
]

ml-gpu-py312 = [
    "tensorflow>=2.19.0,<3.0.0",      # GPU + Python 3.12, numpy 2.x í˜¸í™˜
    "torch>=2.1.0,<3.0.0",            # CUDA + Python 3.12
    "torchvision>=0.16.0,<1.0.0",
    "xgboost>=2.0.3,<3.0.0",
    "lightgbm>=4.1.0,<5.0.0",
    "catboost>=1.2.2,<2.0.0",
    "shap>=0.45.0,<1.0.0",
]
